--- a/firebase.json
+++ b/firebase.json
@@ -1,7 +1,7 @@
 {
     "hosting": {
       "target": "www",
-      "public": "./dist",
+      "public": "dist/",
       "ignore": [
         "firebase.json",
         "**/.*",
